# ouster_example

./: CHANGELOG.md  Dockerfile  Install_OSDriver.sh  Install_ROS_ melodic@Ubuntu_18.04.sh  Install_ROS_kinetic@Ubuntu_16.04.sh  Install_ROS_melodic@Ubuntu_18.04.sh  README-OLD.md  README.md  install-docker.sh  run-docker.sh
C++ so lib for OSClient/licenses/: eigen3.lic
C++ so lib for OSClient_Only 18.04 Support/: CMakeLists.txt  README.md  simple.cpp
cartographer_ros/configuration_files/: assets_writer_cart_2d.lua  assets_writer_cart_3d.lua  cart_2d.lua  cart_3d.lua  demo_3d.rviz
cartographer_ros/launch/: assets_writer_cart_2d.launch  assets_writer_cart_3d.launch  cart_2d.launch  cart_3d.launch  offline_cart_2d.launch  offline_cart_3d.launch
cartographer_ros/urdf/: os_sensor.urdf
ouster_description/: CMakeLists.txt
ouster_description/rviz/: example.rviz
ouster_description/tests/: os_gazebo.test
ouster_description/urdf/: example.urdf.xacro  os_sensor.urdf.xacro
ouster_description/worlds/: os_sensor.world
ouster_gazebo_plugins/: CMakeLists.txt  package.xml
ouster_ros/: README.md
ouster_viz_1.14-beta.11_x64-windows-static/: CHANGELOG.md  LICENSE
scripts/: install_ouster_example_fork.bash  install_ros_dependencies.bash
